콘텐츠 상세 작업중

--- a/src/styles/modules.scss
+++ b/src/styles/modules.scss
@@ -1,7 +1,8 @@
 @mixin ellipsis($line) {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -webkit-line-clamp: $line;
-    -webkit-box-orient: vertical;
-    word-wrap: break-word; 
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: $line;
+  -webkit-box-orient: vertical;
+  word-wrap: break-word;
 }
