--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -150,3 +150,9 @@ input[type="submit"] {
   border: none;
   outline: none;
 }
+
+.gap {
+  width: 100%;
+  height: 8px;
+  background-color: #212121;
+}
