--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -88,7 +88,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  // font: inherit;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -138,8 +138,10 @@ img {
   display: block;
 }
 
-html {
+html,
+body {
   font-size: 10px;
+  font-family: ‘SUIT’, sans-serif;
 }
 
 button,
