horizontal scroll 수정

--- a/src/styles/modules.scss
+++ b/src/styles/modules.scss
@@ -6,3 +6,14 @@
   -webkit-box-orient: vertical;
   word-wrap: break-word;
 }
+
+@mixin horizontalScroll($gap, $padding) {
+  overflow-y: scroll;
+  display: flex;
+  box-sizing: border-box;
+  gap: $gap;
+  padding: 0 $padding;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
