로고 변경(골라라->콘핑)

--- a/src/styles/modules.scss
+++ b/src/styles/modules.scss
@@ -8,7 +8,7 @@
 }
 
 @mixin horizontalScroll($gap, $padding) {
-  overflow-y: scroll;
+  overflow-x: scroll;
   display: flex;
   box-sizing: border-box;
   gap: $gap;
