--- a/src/styles/modules.scss
+++ b/src/styles/modules.scss
@@ -8,6 +8,7 @@
 }
 
 @mixin horizontalScroll($gap, $padding) {
+  position: relative;
   overflow-x: scroll;
   display: flex;
   box-sizing: border-box;
