--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -159,3 +159,10 @@ input[type="submit"] {
   height: 8px;
   background-color: #212121;
 }
+
+// settings for webview
+* {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  user-select: none;
+  -webkit-touch-callout: none;
+}
