셀럽 상세 탭메뉴 작업중

--- a/src/styles/modules.scss
+++ b/src/styles/modules.scss
@@ -18,3 +18,12 @@
     display: none;
   }
 }
+
+@mixin gridItem($columnGap, $rowGap) {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  column-gap: $columnGap;
+  row-gap: $rowGap;
+}
