--- a/static/styles/reset.scss
+++ b/static/styles/reset.scss
@@ -89,7 +89,7 @@ video {
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
-  font-family: "SUIT";
+  font-family: "Pretendard";
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -146,7 +146,7 @@ input[type="submit"] {
   border: none;
   outline: none;
   padding: 0;
-  font-family: "SUIT";
+  font-family: "Pretendard";
 }
 
 .gap {
