--- a/static/styles/reset.scss
+++ b/static/styles/reset.scss
@@ -88,7 +88,7 @@ video {
   padding: 0;
   border: 0;
   vertical-align: baseline;
-  font-family: "Pretendard";
+  font-family: "Pretendard"
 }
 /* HTML5 display-role reset for older browsers */
 article,
